--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,23 @@
-*.class
+.idea/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+.gradle
+**/build/
+!src/**/build/
 
-# Package Files #
-*.jar
-*.war
-*.ear
+# Ignore Gradle GUI config
+gradle-app.setting
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Avoid ignore Gradle wrappper properties
+!gradle-wrapper.properties
+
+# Cache of project
+.gradletasknamecache
+
+# Eclipse Gradle plugin generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
